Feature/connected clients (#19)
* add client model and data transfer objects

* update database migration and register clients table

* implement clients storage and initialization

* add client repository and register it

* add client service and register it

* add client api handler and register it

* register client routes and update main application

* update seed data to include clients

* add user access model and data transfer objects

* create user access table and update migration logic

* add user access repository and register it

* add user access service and register it

* add detailed access response data structure

* add identity provider access url to environment example

* implement user access proxy handler

* initialize user access handler

* register user access route

* update docs

* add login page url

* connect app clients

---------
